--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,30 +1,30 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$show-image: url(../img/background.jpg);
+$home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
-    transition: color 2s ease-out;
+  transition: all 0.5s ease-out;
 }
 
 @mixin background {
-    @if $show-home-image{
-      &#bg-img{
-          background: $show-image;
-          background-attachment: fixed;
-          background-size: cover;
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
 
-          &:after {
-              content: '';
-              position: absolute;
-              top: 0;
-              right: 0;
-              width: 100%;
-              height: 100%;
-              z-index: -1;
-              background: rgba($primary-color, $background-opacity);
-          }
+      &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background: rgba($primary-color, $background-opacity);
       }
     }
+  }
 }
